# kaizen-talent-analytics

./: README.md  agent_master_sync.py  app.py  chatgpt_nexus_integration.py  crypto_market_integration.py  goal_tracker.json  gpt_integration.py  gpt_integration_complete.py  models.py  nexus_dashboard_discovery.py  nexus_evolutionary_analysis.py  nexus_gpt_automation.py  nexus_gpt_connection.py  nexus_master_control.py  nexus_total_recall.py  nexus_windowed_interface.py  production_config.py  ptni_bypass_enhancer.py  ptni_bypass_enhancer_v2.py  ptni_neural_fix.py  pyproject.toml  qnis_canvas_sync.py  qnis_deployment_sweep.py  render.yaml  requirements.txt  requirements_render.txt  routes.py  routes_broken.py  routes_secure.py  singularity.json  system_snapshot.json  talent_insights.py  vercel.json
attached_assets/: Pasted--agent-master-sync-Recover-and-standardize-all-scaffolded-modules-users-and-automations-in-this-R-1749740976003_1749740976004.txt
automation_kernel/: diagnostic_healer.py
communication/: alert_router.py
dashboards/: __init__.py  crypto_nexus_trade.py  dwc.py  jdd.py  master_control.py  quantum_intelligence_engine.py  traxovo.py
data/: dummy_ats_events.csv
examples/: sample_workflow.py
integration/: google_sheets.py  onedrive_sync.py  trello_connector.py
intelligence/: codex_tier.py  nexus_metric_optimizer.py  ptni_neural.py  qnis_system_analyzer.py  quantum_nexus.py  recursive_evolution_core.py
kaizen-talent-analytics-standalone/: README.md  main.py
kaizen_talent_analytics/: __init__.py  fingerprint_engine.py  session_audit.py  (+1 more)
(+75 files in other folders)
